# Divisionaries

./: .gitignore  Cargo.toml  README.md  Settings.toml  TODO  index.html  script.js
Client/: index.html
Client/scripts/: GraphicMapping.js  Renderer.js  State.js  connection.js
Planing/Divisionaries/: project.conf
Server/: Cargo.toml
Server/Client/: TODO  index.html
Server/src/: http_server.rs  main.rs  web_socket.rs
ancient_src/http_server/: game_manager.rs
ancient_src/logic/: game.rs
cargo_graph/: commands.txt  dot.dot  example1.dot
client v1/files/: game.html  nor_div_game.html  nor_div_game_lobby.html
client/files/: TicTacToe.html  game.html  game_template.html  index.html  mod_index.html  nor_div_game.html  nor_div_game_lobby.html  old_game_template.html  old_index.html
client/scripts/: Game.js  api.mjs  api_index.js  div_game.mjs  div_game_index.js  game_template.js  main.mjs  test1.mjs  tic_tac_toe.mjs
config/: Settings.toml  log4rs.yaml
old_src/: http_server.rs  main.rs
scr_v1/: lib.rs  main.rs
scr_v1/data_manager/: mod.rs
scr_v1/logic/: bucket_manager.rs  mod.rs
scr_v1/websocket_server/: mod.rs  ws_connection.rs
scripts/: GraphicMapping.js  ProtocolInterpreter.js  Renderer.js  StateInterpreter.js
src/: TODO  lib.rs  main.rs
src/api/: mod.rs  server.rs
src/bucket/: mod.rs  types.rs
src/connection/: mod.rs  trait_connection.rs  trait_handle_message.rs  trait_handle_new_connection.rs  trait_read_write.rs
src/div/: mod.rs
src/div_game/: mod.rs
src/file_manager/: mod.rs
src/http_server/: game_service_provider.rs  http_utils.rs  mod.rs  ports.rs  server.rs  trait_provide_service.rs  trait_run_http_server.rs
tests/: log4rs.yaml  read_file.txt
(+96 files in other folders)
