[package]
name = "server"
version = "0.1.0"
authors = ["WisartArfun <daro.daro15@gmail.com>"]
edition = "2018"
readme = "README.md"

[lib]
name = "bucketer"
path = "src/lib.rs"

[[bin]]
name = "mybin"
path = "src/main.rs"

[dependencies]
# actix = "0.8.3"
actix-web = "1.0.7"
# actix-service = "0.4.2"
log = "0.4.8"
log4rs = "0.8.3"
serde = "1.0.101"
serde_json = "1.0.40"
# json = "0.12.0"
# actix-http = "0.2.9"
# mime = "0.3.13"
# actix-web-actors = "1.0.2"
tungstenite = "0.9.1"
# rand = "0.7.0"
# lazy_static = "1.4.0"
# ruml = "0.1.0"
# syn = "1.0.5"